--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "globals": {
+        "document": true,
+        "window": true,
+        "localStorage": true
+      }
 }
